- When being prompted to select a tradition, an action, or a to-be-disabled skill group, the prompt is no longer automatically filled with a string of seemingly random numbers and letters.
- Fixed Metamagics/Echos not correctly showing why they cannot be taken in the Select Metamagic window. Closes #4973

Data Changes:
- Corrected the categories (and therefore also mounts, concealabilities, and ranges) for the Krime AKM-SU97, the Krime Ditch, the Krime Stopper-II, the Krime Soldier, and the Krime Ripper as per forum errata found here: https://forums.shadowruntabletop.com/index.php?topic=31750.msg544923#msg544923.
- Vocal Expansion can now properly only be taken at Betaware, Deltaware, or Gammaware grades and now properly adds conditional limit modifiers. Existing characters with this bioware will need to reapply improvements to get these bonuses.
- Internal Synthlink now doubles the cost of the instrument into which it is taken instead of adding double the cost to the instrument. This is based on the way Internal Smartgun's cost is described in the core rulebook.
- Fixed the Unrestricted Kill Code Qualities customdata not working correctly to allow non-technomancers taking the qualities.
- Added missing Corps Cadavre entries. Fixes #4975.
- Picking the Chaos mentor spirit when playing with the German Data Changes custom dataset now prompts the user to take Improved Potential twice instead of prompting only once and then prompting that the user take select a limit for the special Improved Potential (Chaos Mentor) adept power. Fixes #4977.

Changed/New Strings:
- LimitCondition_SkillsActiveLeadership

Build 225
Application Changes:
- Added the ability to re-apply the improvements of individual items instead of only for the entire character all at once. Implements #4628.
- Attempting to reassign or reapply priorities or metatypes that give access to special attributes and/or skills linked to special attributes no longer causes Chummer to crash.